Modified package.json to install pligin module

--- a/storefront/package.json
+++ b/storefront/package.json
@@ -5,7 +5,8 @@
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
+    "install-plugin": "cd ../source-plugin-insite && npm i",
+    "build": "npm run install-plugin && gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
